--- a/landingpage.css
+++ b/landingpage.css
@@ -10,32 +10,43 @@ body {
     line-height: 1.6;
 }
 
+/* Navbar Styles */
 .navbar {
-    background: linear-gradient(to right, #4b0000, #320035);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    color: #fff;
-}
-
-.navbar .logo img {
-    height: 50px;
-}
-
-.navbar ul {
-    list-style: none;
+    background-color: #8a1538;
+  }
+  
+  .logo img {
+    width: 10vw;
     display: flex;
-    gap: 20px;
-}
-
-.navbar ul li a {
-    color: #fff;
+  }
+  
+  /* Normal Navigation Bar (Desktop) */
+  .desktop-nav {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  
+  .desktop-nav li {
+    margin: 0 15px;
+  }
+  
+  .desktop-nav li a {
     text-decoration: none;
-}
-
-/* Hamburger Menu Button */
-#menu-btn {
+    color: #fff;
+  }
+  
+  .desktop-nav li a:hover {
+    color: #ffcc00;
+  }
+  
+  /* Hamburger Menu Button (Hidden by Default) */
+  #menu-btn {
     display: none;
     font-size: 24px;
     cursor: pointer;
@@ -50,7 +61,7 @@ body {
     position: fixed;
     top: 0;
     right: -100%;
-    width: 70%;
+    width: 100%;
     height: 100%;
     background-color: #8a1538;
     color: #fff;
@@ -91,14 +102,28 @@ body {
   /* Mobile View */
   @media screen and (max-width: 767.98px) {
     #menu-btn {
-      display: block;
+      display: block; /* Show hamburger menu */
     }
   
-    nav ul {
-      display: none; /* Hide the desktop navigation */
+    .desktop-nav {
+      display: none; /* Hide desktop navigation */
     }
   }
-
+  
+  /* Desktop View */
+  @media screen and (min-width: 768px) {
+    #menu-btn {
+      display: none; /* Hide hamburger menu */
+    }
+  
+    #sidemenu {
+      display: none; /* Always hide side menu on desktop */
+    }
+  
+    .desktop-nav {
+      display: flex; /* Show desktop navigation */
+    }
+  }
 .hero {
     position: relative;
     height: 70vh;
