fixed facebook social media icon that was initially hidden

--- a/landingpage.css
+++ b/landingpage.css
@@ -150,6 +150,16 @@ body {
     margin-bottom: 20px;
     gap: 10px;
 }
+@media screen and (max-width: 768.98px){
+    .tab-container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-bottom: 20px;
+    }
+}
+    
+
 
 .tab-container button {
     background: transparent;
@@ -168,6 +178,13 @@ body {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
+@media screen and (max-width:768.98px){
+    .search-form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+} 
 
 .form-group {
     display: flex;
